fixed the Swagger
